--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
+    "rodal": "^2.0.1",
     "wagmi": "^0.9.1",
     "web-vitals": "^2.1.4"
   },
